[gd_scene load_steps=5 format=2]

[ext_resource path="res://font/xolonium-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="GoalLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -640.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 1 )
text = "Goal: 0/3"
align = 2
valign = 1
autowrap = true

[node name="TimeLabel" type="Label" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 640.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 1 )
text = "Timer: 0"
valign = 1
autowrap = true

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -160.0
margin_right = 300.0
margin_bottom = -105.0
custom_fonts/font = SubResource( 2 )
text = "Diver's Trove"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = -27.5
margin_right = 53.0
margin_bottom = 27.5
custom_fonts/font = SubResource( 1 )
text = "Play"

[node name="ExitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = 80.0
margin_right = 53.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 1 )
text = "Exit"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
